--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.0.1",
     "react-scripts": "4.0.3",
+    "react-stripe-checkout": "^2.6.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
