--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^6.0.1",
     "react-scripts": "4.0.3",
     "react-stripe-checkout": "^2.6.3",
+    "react-toastify": "^8.2.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
